syntax = "proto3";
package kratos.api;

option go_package = "algo-agent/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message RabbitMQ {
    string url = 1;
    string vhost = 2;
    string exchange_name = 3;
    string routing_key = 4;
    string group = 5;
    string service_queue_prefix = 6;
    string node_queue_prefix = 7;
    string node_name = 8;
  }
  Database database = 1;
  Redis redis = 2;
  RabbitMQ rabbitmq = 3;
}
